# personal_assistant_llm

./: .pre-commit-config.yaml  PHIDATA_README.md  README.md  pyproject.toml
cookbook/agents/: agent.py  app.py  finance.py  web_search.py
cookbook/assistants/: additional_messages.py  auto_assistant.py  basic.py  cli.py  data_analyst.py  finance.py  hackernews.py  instructions.py  joke.py  langchain_retriever.py  long_term_memory.py  memory.py  movie_assistant.py  multiply.py  pdf_assistant.py  python_assistant.py  python_assistant_w_instructions.py  rag_assistant.py  research.py  storage.py  system_prompt.py  tothemoon.py  user_messages.py  user_prompt.py  vision.py  web_search.py
cookbook/assistants/async/: basic.py  basic_stream_off.py  data_analyst.py  hackernews.py  movie_assistant.py
cookbook/examples/auto_rag/: app.py  assistant.py
cookbook/examples/data_eng/: duckdb_assistant.py  python_assistant.py  sales_assistant.py
cookbook/examples/pdf/: assistant.py  cli.py
cookbook/examples/personalization/: app.py  assistant.py
cookbook/examples/rag/: assistant.py
cookbook/examples/rag_with_lance_and_sqllite/: assistant.py
cookbook/examples/research/: app.py  assistants.py  generate_report.py
cookbook/examples/sql/: app.py  assistant.py  load_f1_data.py  load_knowledge.py
cookbook/examples/structured_output/: movie_generator.py  movie_list_generator.py
cookbook/examples/worldbuilding/: app.py  assistant.py  world_builder.py  world_explorer.py
cookbook/integrations/lancedb/: assistant.py
cookbook/integrations/pgvector/: assistant.py
cookbook/integrations/pinecone/: assistant.py
cookbook/integrations/qdrant/: assistant.py
cookbook/integrations/singlestore/: assistant.py
cookbook/knowledge/: arxiv_kb.py  custom_references.py  json_kb.py  langchain.py  llamaindex.py  pdf.py  pdf_url.py  text.py  website_kb.py  wikipedia_kb.py
cookbook/llm_os/: app.py  assistant.py
cookbook/llms/anyscale/: assistant.py  assistant_stream_off.py  cli.py  embeddings.py  pydantic_output.py  tool_call.py
cookbook/llms/azure_openai/: assistant.py  assistant_stream_off.py  cli.py  embeddings.py  (+2 more)
cookbook/teams/: hackernews.py  investment.py
cookbook/tools/: apify_tools.py  app.py  arxiv_tools.py  calculator_tools.py  csv_tools.py  duckdb_tools.py  duckduckgo.py  duckduckgo_2.py  duckduckgo_3.py  email_tools.py  exa_tools.py  file_tools.py  hackernews.py  newspaper4k_tools.py  pubmed.py  pydantic_web_search.py  python_tools.py  resend_tools.py  serpapi_tools.py  shell_tools.py  sql_tools.py  tavily_tools.py  website_tools.py  wikipedia_tools.py  yfinance_tools.py  youtube_tools.py  zendesk_tools.py
cookbook/workflows/: hackernews.py  investment.py  news_article.py
pas/: __init__.py  const.py
pas/assistant/: __init__.py  assistant.py  duckdb.py  prompt_template.py  python.py  task.py  workflow.py
pas/cli/: config.py  console.py  main.py  utils.py
pas/knowledge/: __init__.py  base.py  combined.py  document.py  docx.py  json.py  pdf.py  text.py  website.py
pas/llm/: __init__.py  base.py
pas/memory/: __init__.py  assistant.py  classifier.py  manager.py  row.py
pas/storage/: base.py  sqllite.py
pas/tools/: __init__.py  calculator.py  csv_tools.py  duckdb.py  duckduckgo.py  email.py  file.py  function.py  python.py  shell.py  sql.py  tool_registry.py  toolkit.py  website.py
pas/utils/: common.py  console.py  enum.py  env.py  file.py  filesystem.py  format_str.py  functions.py  git.py  json_io.py  json_schema.py  log.py  merge_dict.py  message.py  pickle.py  py_io.py  shell.py  tools.py  yaml_io.py
pas/vectordb/: __init__.py  base.py
pas_cli/: __main__.py  config.py  main.py  utils.py
pas_cli/assistant/: default.yaml  default_assistant.py  docs_cleaner.py
phi/assistant/: __init__.py  assistant.py  duckdb.py  prompt_template.py  python.py  run.py  task.py  workflow.py
phi/document/: __init__.py  base.py  docx.py  json.py  pdf.py  reader.py  text.py  website.py
phi/embedder/: __init__.py  azure_openai.py  ollama.py  openai.py
phi/knowledge/: __init__.py  base.py  combined.py  document.py  docx.py  json.py  pdf.py  text.py  website.py
phi/llm/: __init__.py  base.py  message.py
phi/memory/: __init__.py  assistant.py  classifier.py  manager.py  memory.py  row.py
phi/prompt/: __init__.py
phi/storage/: base.py  sqllite.py
phi/tools/: __init__.py  calculator.py  csv_tools.py  duckdb.py  duckduckgo.py  email.py  file.py  function.py  pandas.py  phi.py  python.py  resend_tools.py  shell.py  sql.py  tool.py  toolkit.py  website.py
phi/utils/: common.py  enum.py  env.py  file.py  functions.py  git.py  json_io.py  json_schema.py  load_env.py  pickle.py  py_io.py  shell.py  timer.py  tools.py  yaml_io.py
phi/vectordb/: __init__.py  base.py
phi/workflow/: workflow.py
tests/: test_assistant.py  test_imports.py  test_storage.py
(+172 files in other folders)
