[tool.poetry]
name = "phidata"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
GitPython = "^3.1.43"
httpx = "^0.27.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
python-dotenv = "^1.0.1"
PyYAML = "^6.0.1"
rich = "^13.7.1"
tomli = "^2.0.1"
typer = "^0.12.3"
typing-extensions = "^4.12.2"
ollama = "^0.2.1"
chromadb = "^0.5.3"
SQLAlchemy = "^2.0.31"




[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"


[tool.poetry.group.openai]
optional = true

[tool.poetry.group.openai.dependencies]
openai = "^1.35.3"


[tool.poetry.group.webtool]
optional = true

[tool.poetry.group.webtool.dependencies]
duckdb = "^1.0.0"
bs4 = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
